--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~54.0.11",
+    "expo": "54.0.13",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
+    "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "~15.0.7",
     "expo-print": "~15.0.7",
-    "expo-router": "~6.0.9",
+    "expo-router": "~6.0.12",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
