--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "54.0.13",
+    "expo": "54.0.19",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "~15.0.7",
     "expo-print": "~15.0.7",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.13",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
     "react-date-picker": "^12.0.1",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~4.1.1",
@@ -49,7 +49,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "sharp-cli": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
